--- a/templates/index.html
+++ b/templates/index.html
@@ -12,15 +12,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="side-pane"></div>
-    <div class="content">
-        <div class="top">
-            <div class="add-item" id="todoAdd">
-                <div class="add-item__icon"></div>
-                <div class="add-item__text">Add new todo</div>
+    <div class="container">
+        <div class="side-pane"></div>
+        <div class="content">
+            <div class="top">
+                <div class="add-item" id="todoAdd">
+                    <div class="add-item__icon"></div>
+                    <input class="add-item__input" placeholder="I want to...">
+                </div>
             </div>
         </div>
+        <div class="side-pane"></div>
     </div>
-    <div class="side-pane"></div>
 </body>
 </html>
