Added todo.js and justified icon-container using flex

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -249,7 +249,9 @@ body {
 }
 .add-item__icon {
   position: relative;
+  margin: 0;
   right: 1em;
+  top: 50%;
   height: 1em;
   width: 1em;
   border: 2px solid var(--clr-neutral-300);
@@ -271,6 +273,36 @@ body {
 }
 .add-item:focus-within > .add-item__input {
   border-bottom: 2px solid var(--clr-neutral-500);
+}
+
+.todo-item {
+  position: relative;
+  max-width: 60ch;
+  display: flex;
+}
+.todo-item__icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3em;
+  margin: auto;
+}
+.todo-item__icon-container__icon {
+  margin: auto;
+  right: 1em;
+  top: 50%;
+  height: 1em;
+  width: 1em;
+  border: 2px solid var(--clr-neutral-300);
+  border-radius: 15%;
+}
+
+.todo-item__text {
+  flex-grow: 1;
+  border: none;
+  outline: none;
+  width: 100%;
+  background: red;
 }
 
 /*# sourceMappingURL=main.css.map */
