--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,20 @@
                     <input class="add-item__input" placeholder="I want to...">
                 </div>
             </div>
+            <div class="todo-list">
+                <div class="todo-item">
+                    <div class="todo-item__icon-container">
+                        <div class="todo-item__icon-container__icon"></div>
+                    </div>
+                    <div class="todo-item__text">This is a still to do item</div>
+                </div>
+            </div>
+            <div class="done-list">
+                <div class="todo-item--done">
+                    <div class="todo-item__icon"></div>
+                    <div class="todo-item__text">This is a done item</div>
+                </div>
+            </div>
         </div>
         <div class="side-pane"></div>
     </div>
