--- a/static/sass/components/_todo.scss
+++ b/static/sass/components/_todo.scss
@@ -10,43 +10,6 @@
         font-family: sans-serif;
     }
 
-    @include element(icon) {
-        position: relative;
-        margin: 0;
-        right: 1em;
-        top: 50%;
-        height: 1em;
-        width: 1em;
-        border: 2px solid var(--clr-neutral-300);
-        border-radius: 15%;
-    }
-
-    @include element(input) {
-        flex-grow: 1;
-        border: none;
-        border-bottom: 2px solid var(--clr-neutral-300);
-        outline: none;
-        width: 100%;
-        padding: 0 6px;
-        background: transparent;
-    }
-
-    &:focus-within {
-        & > .add-item__icon {
-            border-color: var(--clr-neutral-500);
-        }
-
-        & > .add-item__input {
-            border-bottom: 2px solid var(--clr-neutral-500);
-        }
-    }
-}
-
-.todo-item {
-    position: relative;
-    max-width: 60ch;
-    display: flex;
-
     @include element(icon-container) {
         display: flex;
         justify-content: center;
@@ -66,12 +29,86 @@
         }
     }
 
+    @include element(input) {
+        flex-grow: 1;
+        border: none;
+        border-bottom: 2px solid var(--clr-neutral-300);
+        outline: none;
+        width: 100%;
+        padding: 0 6px;
+        background: transparent;
+    }
+
+    &:focus-within {
+        & > .add-item__icon-container > .add-item__icon-container__icon {
+            border-color: var(--clr-neutral-500);
+        }
+
+        & > .add-item__input {
+            border-bottom: 2px solid var(--clr-neutral-500);
+        }
+    }
+}
+
+.todo-item {
+    position: relative;
+    display: flex;
+    max-width: 60ch;
+    width: 100%;
+    flex-grow: 1;
+
+    @include element(icon-container) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 3em;
+        margin: auto;
+        // background-color: grey;
+
+        @include element(icon) {
+            margin: auto;
+            right: 1em;
+            top: 50%;
+            height: 1em;
+            width: 1em;
+            border: 2px solid var(--clr-neutral-500);
+            border-radius: 15%;
+
+            @include modifier(checked) {
+                border-color: var(--clr-neutral-300);
+                background-color: var(--clr-neutral-300);
+                
+                &::after {
+                    content: '\2713';
+                    display: inline-block;
+                    position: absolute;
+                    top: 0.05em;
+                    left: 1.05em;
+                    transform: scale(0.8);
+                    color: var(--clr-neutral-200);
+                }
+            }
+        }
+    }
+
     @include element(text) {
         flex-grow: 1;
         border: none;
         outline: none;
         width: 100%;
-        background: red;
+
+        @include modifier(checked) {
+            text-decoration: line-through;
+            color: var(--clr-neutral-300);
+        }
     }
 
+    &:hover {
+        background-color: var(--clr-neutral-200);
+        cursor: pointer;
+
+        & > .todo-item__icon-container > .todo-item__icon-container__icon {
+            border-color: var(--clr-neutral-100);
+        }
+    }
 }
