--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,9 @@
         <div class="content">
             <div class="top">
                 <div class="add-item" id="todoAdd">
-                    <div class="add-item__icon"></div>
+                    <div class="add-item__icon-container">
+                        <div class="add-item__icon-container__icon"></div>
+                    </div>
                     <input class="add-item__input" placeholder="I want to...">
                 </div>
             </div>
@@ -30,9 +32,11 @@
                 </div>
             </div>
             <div class="done-list">
-                <div class="todo-item--done">
-                    <div class="todo-item__icon"></div>
-                    <div class="todo-item__text">This is a done item</div>
+                <div class="todo-item">
+                    <div class="todo-item__icon-container">
+                        <div class="todo-item__icon-container__icon todo-item__icon-container__icon--checked"></div>
+                    </div>
+                    <div class="todo-item__text todo-item__text--checked">This is a done item</div>
                 </div>
             </div>
         </div>
