exported the TodoItem class

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,5 +43,5 @@
         <div class="side-pane"></div>
     </div>
 </body>
-<script src="../static/js/todo.js"></script>
+<script src="../static/js/todo.js" type="module"></script>
 </html>
