changed add item icon to a plus

--- a/static/sass/components/_todo.scss
+++ b/static/sass/components/_todo.scss
@@ -19,13 +19,14 @@
         // background-color: grey;
 
         @include element(icon) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin: auto;
-            right: 1em;
-            top: 50%;
             height: 1em;
             width: 1em;
-            border: 2px solid var(--clr-neutral-300);
-            border-radius: 15%;
+            color: var(--clr-neutral-300);
+            font-size: var(--fs-500);
         }
     }
 
@@ -41,7 +42,7 @@
 
     &:focus-within {
         & > .add-item__icon-container > .add-item__icon-container__icon {
-            border-color: var(--clr-neutral-500);
+            color: var(--clr-neutral-500);
         }
 
         & > .add-item__input {
