--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             <div class="top">
                 <div class="add-item" id="todoAdd">
                     <div class="add-item__icon-container">
-                        <div class="add-item__icon-container__icon"></div>
+                        <div class="add-item__icon-container__icon">+</div>
                     </div>
                     <input class="add-item__input" placeholder="I want to...">
                 </div>
